--- a/playbook.yml
+++ b/playbook.yml
@@ -22,6 +22,7 @@
         - vim
         - parcellite
         - terminator
+        - meld
     - name: Clone/Pull oh-my-home
       git: repo=https://github.com/elleryq/oh-my-home.git
            dest={{ OH_MY_HOME }}
