--- a/playbook.yml
+++ b/playbook.yml
@@ -23,6 +23,7 @@
         - parcellite
         - terminator
         - meld
+        - x-tile
     - name: Clone/Pull oh-my-home
       git: repo=https://github.com/elleryq/oh-my-home.git
            dest={{ OH_MY_HOME }}
