--- a/playbook.yml
+++ b/playbook.yml
@@ -68,6 +68,9 @@
     - command: sh "{{ EXVIM }}/unix/install.sh"
       args:
         chdir: "{{ EXVIM }}"
+    - command: vim -u .vimrc --cmd "set rtp=./vimfiles,\$VIMRUNTIME,./vimfiles/after" +PluginInstall +qall
+      args:
+        chdir: "{{ EXVIM }}"
     - name: Set git default editor
       command: git config --global core.editor vim
 
