--- a/playbook.yml
+++ b/playbook.yml
@@ -27,6 +27,7 @@
         - meld
         - x-tile
         - pavucontrol
+        - silversearcher-ag
         - language-pack-zh-hant
         - fonts-noto
         - fonts-noto-cjk
